# bc-cov

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.json  pyproject.toml
bccov/: __init__.py  compile.py  config.py  coverage.py  indexer.py  lib.py  llvm.py  lruntime.py  main.py  runtime.py
bccov/utils/: __init__.py  commands.py  pylogger.py
docs/: TODO.md
lib/: CMakeLists.txt  build.sh
lib/CovInstrument/: CovInstrument.cpp
lib/src/: CovInstrument.cpp
runtime/: Makefile  bbcov_runtime.c  debugruntime.bc  runtime.bc  runtimelib.c  tracepc_runtime.c
tests/: griller.skip  test  test.bc  test.c
tests/inputs/: 1  2  3  4  5  6
tests/inputs/all/: 2  5
